[package]
name = "dht22_pi"
version = "0.2.0"
authors = ["Michael Fletcher <m.fletcher@theplanet.ca>"]
description = "Rust API to obtain temperature and humidity measurements from a DHT22 connected to a Raspberry Pi."
license = "MIT"
documentation = "https://docs.rs/dht22_pi/"
repository = "https://github.com/michaelfletchercgy/dht22_pi"
categories = ["hardware-support"]
keywords = ["pi", "dht22", "temperature"]
edition = "2018"

[dependencies]
rppal = "0.11.3"
libc = "0.2.21"
