[package]
name = "dht22_pi"
version = "1.0.0"
authors = ["Michael Fletcher <m.fletcher@theplanet.ca>"]
description = "Rust API to obtain temperature and humidity measurements from a DHT22 connected to a Raspberry Pi."
license = "MIT"
documentation = "https://docs.rs/dht22_pi/"
repository = "https://github.com/michaelfletchercgy/dht22_pi"
categories = ["hardware-support"]
keywords = ["pi", "dht22", "temperature"]
edition = "2018"

[dependencies]
rppal = { version = "0.13.1" }
libc =  { version = "0.2.126" }
